# query-forge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.md  progress.md
.codex/: AGENTS.md  index.md  progress.md
backend/: Dockerfile  README.md  build.gradle  index.md  progress.md  settings.gradle
configs/: README.md  index.md  progress.md
data/: README.md  index.md  progress.md
docs/: README.md  index.md  progress.md  rag-agentic-no-write-eval-design.md  (+1 more)
frontend/: README.md  (+6 more)
pipeline/: README.md  cli.py  index.md  progress.md  pyproject.toml
pipeline/collectors/: spring_docs_collector.py
pipeline/common/: __init__.py  anchor_normalization.py  anchor_quality.py  cohere_reranker.py  corpus_shadow_sync.py  embeddings.py  experiment_config.py  experiment_run.py  gemini_batch.py  langfuse_observability.py  llm_client.py  local_retriever.py  prompt_assets.py  text_utils.py
pipeline/datasets/: __init__.py  build_eval_dataset.py  import_eval_jsonl.py
pipeline/eval/: answer_eval.py  java_retrieval_client.py  llm_stability_runner.py  retrieval_eval.py  retrieval_eval_compare.py  runtime.py
pipeline/gating/: __init__.py  quality_gating.py
pipeline/generation/: __init__.py  synthetic_query_generator.py
pipeline/loaders/: common.py  import_chunks.py  import_corpus_to_postgres.py  import_documents.py  import_glossary.py  import_relations.py
pipeline/memory/: __init__.py  build_memory.py  materialize_chunk_embeddings.py
pipeline/preprocess/: chunk_docs.py  extract_anchor_candidates.py  extract_glossary.py  normalize_docs.py
pipeline/tests/: index.md  progress.md  test_anchor_normalization.py  test_anchor_quality.py  test_answer_eval_csv.py  test_answer_eval_latency.py  test_build_memory_canonical_anchor_metadata.py  test_corpus_import.py  test_db_ann_runtime.py  test_eval_runtime.py  test_gemini_batch.py  test_java_retrieval_client.py  test_llm_client.py  test_llm_stability_runner.py  test_quality_gating.py  test_retrieval_eval_compare.py  test_strategy_router_eval.py  test_synthetic_query_generator.py
pipeline/tests/fixtures/corpus_small/: chunks.jsonl  glossary_terms.jsonl  raw.jsonl  sections.jsonl  sources.yaml
(+650 files in other folders)
